hphp/hack/test/typecheck/reactive/rx_mutable6.php.coeffects.exp
File "rx_mutable6.php", line 21, characters 3-7:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "rx_mutable6.php", line 18, characters 13-14:
  The local (enclosing) context provides the capability set {}
